WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271864
[ iOS ] 3x editing/spelling/* (layout-tests) are constant failures
https://bugs.webkit.org/show_bug.cgi?id=271864
Summary
[ iOS ] 3x editing/spelling/* (layout-tests) are constant failures
Dawn Morningstar
Reported
2024-03-28 16:36:31 PDT
editing/spelling/document-markers-remain-after-removing-text.html [ Failure ] editing/spelling/grammar-and-spelling-error-styling.html [ ImageOnlyFailure ] editing/spelling/spellcheck-attribute-toggle.html [ ImageOnlyFailure ] These 3 tests are constant failures on iOS iPhone (though passing on iPad) after the update When looking at the diff, the red failure highlighting appears to be gone. HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=editing%2Fspelling%2Fdocument-markers-remain-after-removing-text.html&test=editing%2Fspelling%2Fgrammar-and-spelling-error-styling.html&test=editing%2Fspelling%2Fspellcheck-attribute-toggle.html&platform=ios
--- /Volumes/Data/worker/Apple-iOS-17-Simulator-Release-WK2-Tests/build/layout-test-results/editing/spelling/document-markers-remain-after-removing-text-expected.txt +++ /Volumes/Data/worker/Apple-iOS-17-Simulator-Release-WK2-Tests/build/layout-test-results/editing/spelling/document-markers-remain-after-removing-text-actual.txt @@ -1,2 +1,2 @@ -PASS internals.hasSpellingMarker(0, 4) is true +FAIL internals.hasSpellingMarker(0, 4) should be true. Was false. aaaa bbbb dddd DIFF-URL:
https://build.webkit.org/results/Apple-iOS-17-Simulator-Release-WK2-Tests/276798@main%20(2676)/editing/spelling/spellcheck-attribute-toggle-diffs.html
https://build.webkit.org/results/Apple-iOS-17-Simulator-Release-WK2-Tests/276798@main%20(2676)/editing/spelling/document-markers-remain-after-removing-text-diff.txt
Test-run:
https://build.webkit.org/#/builders/925/builds/2676
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-28 16:39:07 PDT
<
rdar://problem/125585822
>
EWS
Comment 2
2024-03-28 16:56:03 PDT
Test gardening commit
276812@main
(d8e695a323b2): <
https://commits.webkit.org/276812@main
> Reviewed commits have been landed. Closing PR #26589 and removing active labels.
Wenson Hsieh
Comment 3
2024-04-08 18:09:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27003
EWS
Comment 4
2024-04-08 23:00:29 PDT
Committed
277233@main
(697b1a86cea6): <
https://commits.webkit.org/277233@main
> Reviewed commits have been landed. Closing PR #27003 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug